Temporary fix for horizontal scroll on iPhone 5.
This should be improved to actually scale down the fonts in the tables

--- a/website/css/style.scss
+++ b/website/css/style.scss
@@ -505,6 +505,10 @@ main {
 
   }
 
+  .configuration-table-container {
+    max-width: 100%;
+    overflow-x: scroll;
+  }
 
   table {
     font-size: 0.9rem;
